--- a/gb/20/3/2/n11908666.md
+++ b/gb/20/3/2/n11908666.md
@@ -1,88 +1,89 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wqzpig2732/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wqzpig2732/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wqzpig2732/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wqzpig2732/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wqzpig2732/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wqzpig2732/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wqzpig2732/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wqzpig2732/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wqzpig2732/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wqzpig2732/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wqzpig2732/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wqzpig2732/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wqzpig2732/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wqzpig2732/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wqzpig2732/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wqzpig2732/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/wqzpig2732/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/wqzpig2732/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wqzpig2732/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wqzpig2732/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wqzpig2732/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wqzpig2732/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵费城20场落幕 精英赞颂中国传统文化</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/03/200301165423100101-600x400.jpg" />
-<h6>3月1日下午，神韵环球艺术团2020年在美国费城玛丽安剧院的最后一场演出再次爆满加座，在当地总共20场的演出也成功落幕。（新唐人电视台）
+<h6>3月1日下午，神韵环球艺术团2020年在美国费城玛丽安剧院的最后一场演出再次爆满加座，在当地总共20场的演出也圆满落幕。（新唐人电视台）
 </h6>
 <hr>
-	<p>【大纪元2020年03月02日讯】（大纪元美国费城记者站报导）3月1日下午，<a href="https://github.com/wqzpig2732/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>环球艺术团2020年在美国<a href="https://github.com/wqzpig2732/djy/blob/master/gb/tag/%E8%B4%B9%E5%9F%8E%E7%8E%9B%E4%B8%BD%E5%AE%89%E5%89%A7%E9%99%A2.md">费城玛丽安剧院</a>（Merriam Theater）的最后一场演出再次爆满加座，为今年在当地的20场演出划下完美句点。</p>
-<p><a href="https://github.com/wqzpig2732/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>自2月12日在费城开演后，票房火热，常常一票难求，20场演出中有17场剧院都是满场，甚至需要临时加座以满足观众的需求。</p>
-<p>神韵以舞蹈和音乐展示了辉煌灿烂的中华文化，震撼了费城主流精英，宾州众议员特地褒奖神韵，许多人表示，“神韵以美好方式影响西方社会”，“感人至深”，“神韵将传统发扬光大”，“希望神韵在中国上演”。</p>
+<p>【大纪元2020年03月02日讯】（大纪元美国费城记者站报导）3月1日下午，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>环球艺术团2020年在美国<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%B4%B9%E5%9F%8E%E7%8E%9B%E4%B8%BD%E5%AE%89%E5%89%A7%E9%99%A2.md#1">费城玛丽安剧院</a>（Merriam Theater）的最后一场演出再次爆满加座，为今年在当地的20场演出划下完美句点。</p>
+<p><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>自2月12日在费城开演后，票房火热，常常一票难求，20场演出中有17场剧院都是满场，甚至需要临时加座以满足观众的需求。</p>
+<p>神韵以舞蹈和音乐展示了辉煌灿烂的中华文化，震撼了费城主流精英，宾州众议员特地褒奖神韵，许多人表示，“神韵以美好的方式影响西方社会”，“感人至深”，“神韵将传统发扬光大”，“希望神韵在中国上演”。</p>
 <h2>宾州众议员褒奖神韵 盼能在中国上演</h2>
-<figure id="attachment_11908310" style="width: 450px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2020/03/200301165429100101.jpg"><img class="wp-image-11908310 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/03/200301165429100101-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">2020年3月1日下午，宾州众议员Maria Donatucci向神韵费城主办方－－大费城法轮大法学会颁发宾州众议院的褒奖，并观看神韵演出。（新唐人电视台）</figcaption></figure>
-<p>“我喜欢这个演出。非常美丽！我喜欢服饰、天幕背景，还有故事。我真是激动不已，太美了！”宾州众议员Maria Donatucci在<a href="https://github.com/wqzpig2732/djy/blob/master/gb/tag/%E8%B4%B9%E5%9F%8E%E7%8E%9B%E4%B8%BD%E5%AE%89%E5%89%A7%E9%99%A2.md">费城玛丽安剧院</a>为神韵费城主办方－－大费城法轮大法学会颁发褒奖，表彰神韵艺术团对宾州的艺术贡献，并观看演出。</p>
+<figure style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/03/200301165429100101.jpg"><img class="wp-image-11908310 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/03/200301165429100101-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">2020年3月1日下午，宾州众议员Maria Donatucci（右）向神韵费城主办方－－大费城法轮大法学会颁发宾州众议院的褒奖，并观看神韵演出。（新唐人电视台）</figcaption></figure>
+<p>“我喜欢这个演出。非常美丽！我喜欢服饰、天幕背景，还有故事。我真是激动不已，太美了！”宾州众议员Maria Donatucci在<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%B4%B9%E5%9F%8E%E7%8E%9B%E4%B8%BD%E5%AE%89%E5%89%A7%E9%99%A2.md#1">费城玛丽安剧院</a>为神韵费城主办方－－大费城法轮大法学会颁发褒奖，表彰神韵艺术团对宾州的艺术贡献，并观看演出。</p>
 <p>“我喜欢舞蹈，也喜欢他们将演出与信仰相融合的方式，真的很好！我很高兴能来看这个演出。”Donatucci说。</p>
-<p>神韵在全球五大洲150多个城市巡回演出，却不能在中国上演。对此，Donatucci说：“这让我感到悲哀，因为演出是如此美好，深具文化性。他们自己的国家不允许这样美好的演出公演，这真是令人遗憾。我希望他们在这里能实现他们的理想。”</p>
+<p>神韵在全球五大洲150多个城市巡回演出，却不能在中国上演。对此，Donatucci说：“这让我感到悲哀，因为演出是如此美好，深具文化性。他们自己的国家不允许这样美好的演出，这真是令人遗憾。我希望他们在这里能实现他们的理想。”</p>
 <p>演出中关于善良人遭迫害的故事让Donatucci内心深受触动，“我对监狱的部分感到非常沮丧，那是如此地压抑和令人不安。但我又很感动，我被舞蹈家的美丽和优雅所感动。”</p>
-<p>神韵艺术家把“真善忍”的准则融入日常生活和艺术训练中，Donatucci很认同。她说：“我认为他们的舞动充满热忱，就像他们所信仰的那样。想想他们在这场演出中所做的所有不同的事情，真是太神奇了！确实是很美丽！”</p>
+<p>神韵艺术家把“真、善、忍”的准则融入日常生活和艺术训练中，Donatucci很认同。她说：“我认为他们的舞动充满热忱，就像他们所信仰的那样。想想他们在这场演出中所做的所有不同的事情，真是太神奇了！确实是很美丽！”</p>
 <p>神韵歌唱家的演唱也令Donatucci赞赏有加，“太精彩了！我也喜欢在他们演唱时展示给我们看的歌词，非常令人感动，非常富有灵性，非常神圣，太棒了！”</p>
 <h2>公司副总裁：神韵以美好方式影响西方社会</h2>
-<figure id="attachment_11908085" style="width: 450px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2020/03/200301165441100101.jpg"><img class="wp-image-11908085 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/03/200301165441100101-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">2020年3月1日下午，联合特许经营集团公司（United Franchise Group）的地区副总裁Eric Brewstein欣赏神韵环球艺术团在费城玛丽安剧院的第20场演出。（良克霖／大纪元）</figcaption></figure>
+<figure id="attachment_11908085" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/03/200301165441100101.jpg"><img class="wp-image-11908085 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/03/200301165441100101-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">2020年3月1日下午，联合特许经营集团公司（United Franchise Group）的地区副总裁Eric Brewstein欣赏神韵环球艺术团在费城玛丽安剧院的第20场演出。（良克霖／大纪元）</figcaption></figure>
 <p>Eric Brewstein是联合特许经营集团公司（United Franchise Group）的地区副总裁。该公司经营许多连锁品牌，在全世界有1400多个加盟商。</p>
 <p>“舞蹈、演员的配合、美丽的场景都很棒，很漂亮！”Brewstein欣赏神韵演出后连声赞叹。</p>
 <p>“台上一分钟，台下十年功。”Brewstein表示，“艺术家的刻苦训练、奉献和团队合作精神非常具有教育意义。”</p>
-<p>Brewstein表示，表现<a href="https://github.com/wqzpig2732/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md">中国传统文化</a>的神韵正以美好的方式影响着西方社会。他说：“我认为能够在海外公开弘扬中国传统历史文化真是太好了。（神韵）以最美丽的方式感染着我们。”</p>
-<p>看神韵演出让Brewstein感受到艺术家的<a href="https://github.com/wqzpig2732/djy/blob/master/gb/tag/%E7%A5%9E%E6%80%A7.md">神性</a>内涵，“当你静下心来享受演出时，看看演员身上的活力、韵律的节奏和振动，如果你没有感受到神性，没有感受到艺术家的投入，那么你就错过了很多东西。这些都是实实在在的。”</p>
+<p>Brewstein表示，表现<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">中国传统文化</a>的神韵正以美好的方式影响着西方社会。他说：“我认为能够在海外公开弘扬中国传统历史文化真是太好了。（神韵）以最美丽的方式感染着我们。”</p>
+<p>看神韵演出让Brewstein感受到艺术家的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%A5%9E%E6%80%A7.md#1">神性</a>内涵，“当你静下心来享受演出时，看看演员身上的活力、韵律的节奏和振动，如果你没有感受到神性，没有感受到艺术家的投入，那么你就错过了很多东西。这些都是实实在在的。”</p>
 <h2>神韵讲述故事尽在不言中 基金会主席感恩</h2>
-<figure id="attachment_11908129" style="width: 450px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2020/03/200301165437100101.jpg"><img class="wp-image-11908129 size-medium" title="2020神韵" src="https://i.epochtimes.com/assets/uploads/2020/03/200301165437100101-450x300.jpg" alt="2020神韵" width="450" b="300" /></a><figcaption class="wp-caption-text">2020年3月1日下午，新泽西州的基金会主席Alesia Shute（右）和友人欣赏神韵环球艺术团在费城玛丽安剧院的最后一场演出。（新唐人电视台）</figcaption></figure>
-<p>“我明年会再来、一定再来！”新泽西州的基金会主席Alesia Shute观看神韵演出后表示，“他们没有说一句话，就讲述了整个故事”，让她“开心、放松”，带给她难忘的体验。</p>
+<figure id="attachment_11908129" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/03/200301165437100101.jpg"><img class="wp-image-11908129 size-medium" title="2020神韵" src="https://i.epochtimes.com/assets/uploads/2020/03/200301165437100101-450x300.jpg" alt="2020神韵" width="450" b="300" /></a><figcaption class="wp-caption-text">2020年3月1日下午，新泽西州的基金会主席Alesia Shute（右）和友人欣赏神韵环球艺术团在费城玛丽安剧院的最后一场演出。（新唐人电视台）</figcaption></figure>
+<p>“我明年会再来，一定再来！”新泽西州的基金会主席Alesia Shute观看神韵演出后表示，“他们没有说一句话，就讲述了整个故事”，让她“开心、放松”，带给她难忘的体验。</p>
 <p>Shute热衷于慈善事业，她经营的Alesia Shute基金会旨在改善患者在住院期间的舒适性，她在自己的书籍《一切都好》（Everything’s Okay）中讲述了自己儿童时成功战胜癌症的经历。该基金会的捐赠及图书销售利润直接捐赠给费城儿童医院（CHOP）。</p>
 <p>“女演员看上去那么美，相当优雅。她们都面带微笑，非常快乐，她们很喜欢自己做的事情。”Shute认为，看神韵演出是一种难得的体验，“演出美丽动人，展现了丰富的文化，我为中国人感到难过，他们无法做我们这里能够做的事情（信仰自由）。”</p>
 <p>Shute也非常赞同神韵复兴传统文化的宗旨，“他们绝对应该做这件事情，我们谁都不愿失去自己的文化，他们绝对应该继续做下去。”</p>
 <h2>信仰故事直触心灵 公司财务高管赞神韵激励人心</h2>
-<figure id="attachment_11907911" style="width: 450px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2020/03/200301165451100101.jpg"><img class="wp-image-11907911 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/03/200301165451100101-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">2020年3月1日下午，医疗信息技术公司IMS Health的财务部高管Jim Ferguson携太太Tracy Ferguson欣赏神韵环球艺术团在费城玛丽安剧院的第二十场演出。（卫泳／大纪元）</figcaption></figure>
+<figure id="attachment_11907911" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/03/200301165451100101.jpg"><img class="wp-image-11907911 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/03/200301165451100101-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">2020年3月1日下午，医疗信息技术公司IMS Health的财务部高管Jim Ferguson携太太Tracy Ferguson欣赏神韵环球艺术团在费城玛丽安剧院的第二十场演出。（卫泳／大纪元）</figcaption></figure>
 <p>“非常激动人心，非常美！”医疗信息技术公司IMS Health的财务部高管Jim Ferguson观看神韵演出后连声赞叹道。</p>
 <p>Ferguson说：“独唱很美，神韵歌唱家简直不可思议。整场演出美妙而感人，非常优秀。”“歌词中的信息也很好，让人谦卑，真是好的信息。”</p>
 <p>神韵呈现的文化和精神内涵震撼人心，Ferguson感佩地说：“非常感动。比如那个（修炼者）眼睛（复明）的舞剧，真是太……真的触动了我，我很感动！（演出）触动人心，而且非常非常美，舞蹈太美了。”</p>
 <h2>神韵弘扬传统 强生公司总监赞了不起</h2>
-<figure id="attachment_11907923" style="width: 450px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2020/03/200301165445100101.jpg"><img class="wp-image-11907923 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/03/200301165445100101-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">2020年3月1日下午，《财富》世界五百强之一的强生公司的供应流程总监Eric Watson欣赏神韵环球艺术团在费城玛丽安剧院的第二十场演出。（良克霖／大纪元）</figcaption></figure>
-<p>“演出在艺术手法上生动活泼，几乎一气呵成，很多承前启后的内容，都协调得整齐划一。”《财富》全球五百强之一的强生公司（Johnson &#038; Johnson）供应流程总监Eric Watson为神韵精彩绝伦的艺术成就深深折服。</p>
+<figure id="attachment_11907923" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/03/200301165445100101.jpg"><img class="wp-image-11907923 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/03/200301165445100101-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">2020年3月1日下午，《财富》世界五百强之一的强生公司的供应流程总监Eric Watson欣赏神韵环球艺术团在费城玛丽安剧院的第二十场演出。（良克霖／大纪元）</figcaption></figure>
+<p>“演出在艺术手法上生动活泼，几乎一气呵成，很多承前启后的内容，都协调得整齐划一。”《财富》全球五百强之一的强生公司（Johnson &amp; Johnson）供应流程总监Eric Watson为神韵精彩绝伦的艺术成就深深折服。</p>
 <p>“从美学上来说，演出非常令人愉快，因为她的协调性很好。而且我喜欢背景天幕与演员之间的互动，演员在舞台和屏幕上进出自如，非常酷！”他说。</p>
-<p>他赞佩神韵致力于复兴<a href="https://github.com/wqzpig2732/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md">中国传统文化</a>，“从历史的角度看，正如一切事物一样，想要传承那些传统和教训，必须有人承担起发扬光大的责任，我很高兴他们（神韵演员）在这里做这件事。了不起！”</p>
+<p>他赞佩神韵致力于复兴<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">中国传统文化</a>，“从历史的角度看，正如一切事物一样，想要传承那些传统和教训，必须有人承担起发扬光大的责任，我很高兴他们（神韵演员）在这里做这件事。了不起！”</p>
 <p>最后Watson表示，神韵带给他意外的喜悦，“非常愉快，其实我自己都感到惊讶，我是如此地喜爱这场演出，超出预期。”</p>
 <p>责任编辑：林蓁</p>
-	
+
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/3/2/n11908666.htm">神韵费城20场落幕 精英赞颂中国传统文化</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/18/6/5/n10457052.htm">大学学习：做好这九步 成功完成作业（三）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/29/n10437043.htm">大学学习：做好这九步 成功完成作业（二）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/23/n10419796.htm">大学学习：做好这九步 成功完成作业（一）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/3/9/n10203031.htm">12年级毕业成为大一新生 你要注意什么</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/5/15/n9146146.htm">英国大学考试季“驾到” 考前冲刺有妙招</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/1/19/n8721729.htm">写作关联力：品格篮球队</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/10/20/n8414529.htm">大学生活宝鉴（8）：大学生必备技能 如何做阅读笔记</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/10/5/n8368603.htm">大学生活宝鉴（7）：大学生阅读学术论文的必备技能</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/8/23/n8229165.htm">大学生活宝鉴（5）：大学生如何管理学习压力</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/8/8/n8180536.htm">大学生活宝鉴（4）：如何应对小组作业中的偷懒者</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883542.htm">【热点互动】围绕零号病人 官方为何讳莫如深</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/5/n11846854.htm">【我来说西游】黑风山怪窃袈裟</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11881829.htm">【拍案惊奇】新病毒无特效药 病患求生要闯2关</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881404.htm">北京西城成疫情重灾区 财政部员工住宅楼染疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880959.htm">当官的吃不完 贵州援助鄂州蔬菜烂在仓库</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879605.htm">【翻墙必看】分析：中国粮食危机再浮出水面</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883801.htm">古天乐全球搜130万?罩 四类人获优先赠予</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878231.htm">新冠病毒假阴性或有4大原因 会带来何风险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879107.htm">钻石公主号隔离仍爆高感染率 医师揭4大原因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883959.htm">刘真惊传叶克膜抢救 主动脉瓣狭窄有多危险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11881805.htm">搭飞机和计程车留意这些事 降传染风险</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/1/n11906856.md#1">采购经理：神韵歌词传递伟大的信息</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/1/n11906651.md#1">神韵费城周六两场爆满 政商界精英齐赞</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/1/n11906053.md#1">医院首席开发官身心愉悦 赞颂神韵充满能量</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/1/n11906561.md#1">最佳律师所首席财务官：神韵之美难言表</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/1/n11906537.md#1">德拉华州众议员：神圣美好 神韵令人惊叹</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/1/n11906385.md#1">灵魂投入舞蹈 开发商赞神韵艺术家演活历史</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/wqzpig2732/djy/blob/master/gb/20/3/2/n11908666.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wqzpig2732/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wqzpig2732/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wqzpig2732/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wqzpig2732/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wqzpig2732/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/28/n11903611.md#1">组图：北京军队大院防疫日益严格 层层设卡</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/27/n11901202.md#1">组图：新冠肺炎笼罩下的北京</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/16/n10061771.md#1" target="_blank">共产暴政录：拼音化与简化汉字</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/17/n10401300.md#1" target="_blank">三位西方富豪的经商成功之道</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942723.md#1">华人在美申请检测遭拒？中共谎言被揭穿</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940920.md#1">荷兰科学家首发现武汉病毒抗体 药物快过疫苗</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940024.md#1">“郑州毒王”隐瞒旅游史 恐影响全球近4万人</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11939304.md#1">武汉失踪青年达数百人 警方不作为（上）</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/19/n11805341.md#1">【思想领袖】史帕丁：中共寄生式经济 川普反制</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945347.md#1">武汉小区封楼20多天 又确诊2例 居民焦虑</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941216.md#1">【一线采访视频版】封城近50天 武汉人生活困苦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938952.md#1">疫情下范冰冰晒自拍 出门戴双层口罩引围观</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938685.md#1">梁朝伟赴澳洲拍漫威片《上气》剧组全面停工</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/2/n11908666.htm">神韵费城20场落幕 精英赞颂中国传统文化</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/3/2/n11908666.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
